--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,26 +12,28 @@
         android:id="@+id/textview_countdown"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="10:00"
-        android:textSize="70sp"
         android:textAppearance="@style/Base.TextAppearance.AppCompat"
+        android:textSize="70sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.377"
+        tools:text="10:00" />
 
     <me.zhanghai.android.materialprogressbar.MaterialProgressBar
         android:id="@+id/progress_count"
         style="@style/Widget.MaterialProgressBar.ProgressBar"
-        android:minWidth="306dp"
-        android:minHeight="306dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="94dp"
+        android:minHeight="306dp"
+        android:minWidth="306dp"
+        android:theme=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.314" />
 
 </android.support.constraint.ConstraintLayout>
